--- a/front/index.html
+++ b/front/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google" content="notranslate" />
+    <meta name="googlebot" content="notranslate" />
     <title>MY PREGIATO</title>
     <meta name="description" content="Pregiato Management System" />
     <meta name="author" content="Pregiato" />
